Changed to Java 8 for compatibility reasons. Removed the use of tini. Updated entrypoint script. Added VM Java options.